--- a/exchange/exchange_app/templates/exchange/history.html
+++ b/exchange/exchange_app/templates/exchange/history.html
@@ -6,8 +6,8 @@
     <table>
         <tr>
             <th>Дата</th>
-            <th>Валюта из</th>
-            <th>Валюта в</th>
+            <th>Продажа</th>
+            <th>Покупка</th>
             <th>Сумма</th>
             <th>Обменянная сумма</th>
         </tr>
