--- a/exchange/exchange_app/templates/exchange/rates.html
+++ b/exchange/exchange_app/templates/exchange/rates.html
@@ -12,20 +12,30 @@
     {% endif %}
     <table>
         <tr>
-            <th>Продажа</th>
-            <th>Покупка</th>
-            <th>Курс</th>
+            <th>Валюта</th>
+            <th>Стоимость</th>
             <th>Дата</th>
+            {% if user.is_superuser %}
+                <th>Осталось в кассе</th>
+                <th>Действия</th>
+            {% endif %}
         </tr>
         {% for rate in rates %}
         <tr>
-            <td>{{ rate.currency_from }}</td>
-            <td>{{ rate.currency_to }}</td>
-            <td>{{ rate.rate }}</td>
-            <td>{{ rate.date }}</td>
+            <td>{{ rate.currency_name }}</td>
+            <td>{{ rate.rate_to_base }}</td>
+            <td>{{ rate.rate_date|date:"d.m.Y" }}</td>
+            {% if user.is_superuser %}
+                <td>{{ rate.amount_in_cash }}</td>
+                <td>
+            <!-- Форма для удаления курса -->
+                    <form action="{% url 'exchange:delete_rate' rate.rate_id %}" method="post" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" onclick="return confirm('Вы уверены, что хотите удалить этот курс?');"> 🗑️</button>
+                    </form>
+                </td>
+            {% endif %}
         </tr>
         {% endfor %}
     </table>
-    <a href="{% url 'exchange:exchange_currency' %}">Обменять валюту</a>
-    <a href="{% url 'exchange:logout' %}">Выйти</a>
 {% endblock %}
