--- a/exchange/exchange_app/templates/exchange/base.html
+++ b/exchange/exchange_app/templates/exchange/base.html
@@ -20,14 +20,18 @@
                     <a class="nav-link" href="{% url 'exchange:rates' %}">Курсы валют</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'exchange:exchange_history' %}">История</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="{% url 'admin:index' %}">Админка</a>
                 </li>
             </ul>
         </div>
     </nav>
+     <div class="auth-links">
+            {% if user.is_authenticated %}
+                <a href="{% url 'exchange:logout' %}">Выйти</a>
+             {% elif request.resolver_match.view_name != 'exchange:login' %}
+                <a href="{% url 'exchange:login' %}">Войти</a>
+            {% endif %}
+        </div>
     <div class="container mt-4">
         {% block content %}
         {% endblock %}
