--- a/exchange/exchange_app/templates/exchange/history.html
+++ b/exchange/exchange_app/templates/exchange/history.html
@@ -6,18 +6,26 @@
     <table>
         <tr>
             <th>Дата</th>
+            {% if is_admin %}
+                <th>Оператор</th>
+            {% endif %}
             <th>Продажа</th>
             <th>Покупка</th>
-            <th>Сумма</th>
-            <th>Обменянная сумма</th>
+            <th>Отдано</th>
+            <th>Получено</th>
+            <th>Сдача</th>
         </tr>
         {% for transaction in transactions %}
         <tr>
-            <td>{{ transaction.date }}</td>
-            <td>{{ transaction.currency_from }}</td>
-            <td>{{ transaction.currency_to }}</td>
-            <td>{{ transaction.amount }}</td>
-            <td>{{ transaction.exchanged_amount }}</td>
+            <td>{{ transaction.0|date:"d.m.Y" }}</td>
+             {% if is_admin %}
+                <td>{{ transaction.6 }}</td>
+            {% endif %}
+            <td>{{ transaction.1 }}</td>
+            <td>{{ transaction.2 }}</td>
+            <td>{{ transaction.3 }}</td>
+            <td>{{ transaction.4 }}</td>
+            <td>{{ transaction.5 }}</td>
         </tr>
         {% endfor %}
     </table>
