--- a/exchange/exchange_app/templates/exchange/login.html
+++ b/exchange/exchange_app/templates/exchange/login.html
@@ -14,7 +14,7 @@
     {% if messages %}
         <div>
             {% for message in messages %}
-                <p>{{ message }}</p>
+             <p {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
             {% endfor %}
         </div>
     {% endif %}
