--- a/exchange/exchange_app/templates/exchange/base.html
+++ b/exchange/exchange_app/templates/exchange/base.html
@@ -19,9 +19,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'exchange:rates' %}">Курсы валют</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'admin:index' %}">Админка</a>
-                </li>
             </ul>
         </div>
     </nav>
@@ -29,6 +26,7 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'exchange:logout' %}">Выйти</a>
              {% elif request.resolver_match.view_name != 'exchange:login' %}
+                <a href="{% url 'exchange:register' %}">Зарегистрироваться</a>
                 <a href="{% url 'exchange:login' %}">Войти</a>
             {% endif %}
         </div>
