--- a/exchange/exchange_app/templates/exchange/add_currency_to_cash.html
+++ b/exchange/exchange_app/templates/exchange/add_currency_to_cash.html
@@ -7,7 +7,7 @@
   <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Добавить валюту</button>
+    <button type="submit">Пополнить</button>
   </form>
 
   {% if messages %}
