--- a/exchange/exchange_app/templates/exchange/add_currency_to_cash.html
+++ b/exchange/exchange_app/templates/exchange/add_currency_to_cash.html
@@ -3,18 +3,16 @@
 
 {% block content %}
   <h1>Добавить валюту в кассу</h1>
-
+  {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+  {% endif %}
   <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Пополнить</button>
+    <button type="submit">Добавить</button>
   </form>
-
-  {% if messages %}
-    <ul class="message">
-      {% for message in messages %}
-        <li class="{{ message.tags }}">{{ message }}</li>
-      {% endfor %}
-    </ul>
-  {% endif %}
 {% endblock %}
