--- a/exchange/exchange_app/templates/exchange/cash_reserves.html
+++ b/exchange/exchange_app/templates/exchange/cash_reserves.html
@@ -17,6 +17,7 @@
       <tr>
         <th>Название валюты</th>
         <th>Баланс</th>
+        <th>Выделение</th>
       </tr>
     </thead>
     <tbody>
@@ -36,8 +37,8 @@
     </tbody>
 
   </table>
-    <a href="{% url 'exchange:add_currency' %}" class="btn btn-secondary">Добавить валюту</a>
-    <a href="{% url 'exchange:add_currency_to_cash' %}" class="btn btn-secondary">Пополнить баланс</a>
+    <a href="{% url 'exchange:add_currency' %}" class="btn  btn-primary">Добавить валюту</a>
+    <a href="{% url 'exchange:add_currency_to_cash' %}" class="btn  btn-primary">Пополнить баланс</a>
          <button type="submit" class="btn btn-danger" onclick="return confirm('Вы уверены, что хотите удалить выбранные валюты?');">Удалить выбранные</button>
   </form>
 {% endblock %}
