--- a/exchange/exchange_app/templates/exchange/rates.html
+++ b/exchange/exchange_app/templates/exchange/rates.html
@@ -38,6 +38,7 @@
     </table>
      {% if user.is_superuser %}
         <button type="submit" class="btn btn-danger" onclick="return confirm('Вы уверены, что хотите удалить выбранные курсы?');"> Удалить</button>
-     {% endif %}
 </form>
+<a href="{% url 'exchange:add_exchange_rate' %}" class="btn  btn-primary">Добавить курс валют</a>
+ {% endif %}
 {% endblock %}
