--- a/exchange/exchange_app/templates/exchange/cash_reserves.html
+++ b/exchange/exchange_app/templates/exchange/cash_reserves.html
@@ -10,28 +10,50 @@
             {% endfor %}
         </ul>
     {% endif %}
-  <form method="post" action="{% url 'exchange:delete_currencies' %}">
-    {% csrf_token %}
   <table>
     <thead>
       <tr>
         <th>Название валюты</th>
         <th>Баланс</th>
-        <th>Выделение</th>
+        <th>Архивирована</th>
+        <th>Действия</th>
       </tr>
     </thead>
     <tbody>
       {% for currency in currencies %}
         <tr>
-          <td>{{ currency.currency_name  }}</td>
-          <td>{{ currency.amount_in_cash  }}</td>
+            <td>{{ currency.currency_name  }}</td>
+            <td>{{ currency.amount_in_cash  }}</td>
+            <td>
+                {% if currency.is_archived %}
+                    Да
+                {% else %}
+                    Нет
+                {% endif %}
+            </td>
         <td>
-          <input type="checkbox" name="currency_ids" value="{{ currency.currency_id }}">
+        <div class="btn-group" role="group" aria-label="Actions">
+          {% if currency.is_archived %}
+            <form method="post" action="{% url 'exchange:unarchived_currency' currency.currency_id %}">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-success">Восстановить</button>
+            </form>
+          {% else %}
+            <form method="post" action="{% url 'exchange:archive_currency' currency.currency_id %}">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-warning">Архивировать</button>
+            </form>
+          {% endif %}
+          <form method="post" action="{% url 'exchange:delete_currencies' currency.currency_id %}">
+              {% csrf_token %}
+               <button type="submit" class="btn btn-danger">Удалить</button>
+          </form>
+        </div>
         </td>
         </tr>
       {% empty %}
         <tr>
-          <td colspan="3">Нет валют в системе.</td>
+          <td colspan="4">Нет валют в системе.</td>
         </tr>
       {% endfor %}
     </tbody>
@@ -39,6 +61,5 @@
   </table>
     <a href="{% url 'exchange:add_currency' %}" class="btn  btn-primary">Добавить валюту</a>
     <a href="{% url 'exchange:add_currency_to_cash' %}" class="btn  btn-primary">Пополнить баланс</a>
-         <button type="submit" class="btn btn-danger" onclick="return confirm('Вы уверены, что хотите удалить выбранные валюты?');">Удалить выбранные</button>
   </form>
 {% endblock %}
