--- a/exchange/exchange_app/templates/exchange/rates.html
+++ b/exchange/exchange_app/templates/exchange/rates.html
@@ -3,6 +3,7 @@
 
 {% block content %}
     <h2>Курсы валют</h2>
+    {{ time }}
     {% if messages %}
         <ul class="messages">
             {% for message in messages %}
